tests/org.eclipse.php.core.tests/workspace/errors/php7/newByReference.pdtt
--TEST--
Test unfinished try statement error reporting
--FILE--
<?php
namespace name;

class a {
}

$a = & new a ();
--EXPECT--
[line=7, start=43, end=46] syntax error, unexpected 'new'